SF Primes/src/objects/Procedure__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Procedure_del_del__c</fullName>
        <label>Procedure</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Articles_del__c</fullName>
        <label>Related Articles</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <label>Procedure</label>
    <pluralLabel>Procedures</pluralLabel>
</CustomObject>